# encryption-c-rp2350

./: .gitignore  CMakeLists.txt  README.md  build.ps1  paper.typ  pico_sdk_import.cmake
include/: auth.h  cli.h  demo_artifact.h  mbedtls_config.h
scripts/: dec.py  demo_artifact.json
src/: auth.c  cli.c  main.c  mbedtls_shims.c
